--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:300,400&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:300,400&display=swap');
+
 // Bootstrap SCSS files
 @import 'node_modules/bootstrap/scss/bootstrap';
 @import 'node_modules/bootstrap-vue/src/index.scss';
