--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito+Sans:300,400&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:300,400&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap');
 
 // Bootstrap SCSS files
 @import 'node_modules/bootstrap/scss/bootstrap';
 @import 'node_modules/bootstrap-vue/src/index.scss';
 
-// Global Variables
-@import './variables';
+// Global
+@import './_global';
+@import './_variables';
+@import './_mediaQueries';
 
 // Global Component
 @import './navbar';
