--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -9,6 +9,7 @@
 @import './_global';
 @import './_variables';
 @import './_mediaQueries';
+@import './_hooper';
 
 // Global Component
 @import './navbar';
