Registration with form validation

--- a/src/assets/scss/_hooper.scss
+++ b/src/assets/scss/_hooper.scss
@@ -5,6 +5,11 @@
     outline: none;
   }
 
+  .hooper-track {
+    padding-left: 0;
+    ;
+  }
+
   .hooper-list {
     .hooper-pagination {
       .hooper-indicator {
