--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -10,6 +10,7 @@
 @import './_global';
 @import './_mediaQueries';
 @import './_hooper';
+@import './_formValidation';
 
 // Global Component
 @import './navbar';
