--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -1,12 +1,13 @@
 #header {
     position: fixed;
-    height: 65px;
     width: 100%;
     z-index: 9;
     background-color: $color-white;
     box-shadow: 0px 0px 8px #8080801a !important;
 
-    nav {
+    .v-toolbar__content {
+        padding: 8px 40px;
+
         .nav-list {
             display: flex;
             list-style-type: none;
